--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "08-pacitente-zustan",
   "private": true,
+  "homepage": "https://github.com/carlos-luis-alvarado/frontend-01-paciente-zustand",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
