--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "08-pacitente-zustan",
   "private": true,
-  "homepage": "https://github.com/carlos-luis-alvarado/frontend-01-paciente-zustand",
+  "homepage": "https://carlos-luis-alvarado.github.io/frontend-01-paciente-zustand/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
